// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Configure2fa Component enable2fa (form submit) should set state to "conflict" and not call on enable2fa 1`] = `
<div
  className="settings-content"
>
  <div
    className="configure2fa-settings"
  >
    <div
      className="panel panel-default"
    >
      <div
        className="panel-heading"
      >
        <Connect(Translate)>
          Two-step verification
        </Connect(Translate)>
      </div>
      <div
        className="panel-body"
      >
        <div>
          <p>
            <Connect(Translate)>
              Activate this feature for enhanced account security
            </Connect(Translate)>
          </p>
          <h3>
            <Connect(Translate)>
              Using Google Authenticator
            </Connect(Translate)>
          </h3>
          <LocalForm
            initialState={Object {}}
            model="2fa"
            onSubmit={[Function]}
          >
            <ol>
              <li>
                <Connect(Translate)>
                  Install the Google Authenticator app on your mobile device
                </Connect(Translate)>
              </li>
              <li>
                <Connect(Translate)>
                  Open the app and select "Add Account" (usually a plus symbol)
                </Connect(Translate)>
              </li>
              <li>
                <Connect(Translate)>
                  Scan the following QR code selecting the "scan barcode" option:
                </Connect(Translate)>
                <div
                  className="qr-code"
                >
                  <ForwardRef
                    bgColor="white"
                    fgColor="black"
                    includeMargin={false}
                    level="Q"
                    size={200}
                    value="otpAuthURL"
                  />
                </div>
                <Connect(Translate)>
                  Or enter this secret key into your Authenticator app
                </Connect(Translate)>
                <br />
                <Connect(Translate)>
                  (please keep this key secret and don't share it):
                </Connect(Translate)>
                <div
                  className="secret-key"
                >
                  <span>
                    generatedSecret
                  </span>
                </div>
              </li>
              <li>
                <Connect(Translate)>
                  Enter the 6-digit verification code generated by your Authenticator app:
                </Connect(Translate)>
                <br />
                <div
                  className="row"
                >
                  <div
                    className="col-8 col-md-4 col-lg-2 has-error"
                  >
                    <DefaultConnectedControlText
                      className="form-control"
                      id="token"
                      model=".token"
                    />
                  </div>
                </div>
              </li>
            </ol>
            <p>
              <Connect(I18NLink)
                className="btn btn-default"
                to="/settings/account"
              >
                Cancel
              </Connect(I18NLink)>
              <button
                className="btn btn-success"
                type="submit"
              >
                <Connect(Translate)>
                  Confirm
                </Connect(Translate)>
              </button>
            </p>
          </LocalForm>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Configure2fa Component when user already using 2fa should show a "successfully configured" component 1`] = `
<div
  className="settings-content"
>
  <div
    className="configure2fa-settings"
  >
    <div
      className="panel panel-default"
    >
      <div
        className="panel-heading"
      >
        <Connect(Translate)>
          Two-step verification
        </Connect(Translate)>
      </div>
      <div
        className="panel-body"
      >
        <div
          className="alert alert-success"
        >
          <Connect(Icon)
            icon="check"
          />
          <div
            className="force-ltr"
          >
            <Connect(Translate)>
              Congratulations!
            </Connect(Translate)>
            <br />
            <Connect(Translate)>
              You have successfully configured two-step verification.
            </Connect(Translate)>
          </div>
        </div>
        <Connect(I18NLink)
          className="btn btn-success"
          to="/settings/account"
        >
          OK
        </Connect(I18NLink)>
      </div>
    </div>
  </div>
</div>
`;

exports[`Configure2fa Component when user not already using 2fa should show a QR code and Secret upon mounting 1`] = `
<div
  className="settings-content"
>
  <div
    className="configure2fa-settings"
  >
    <div
      className="panel panel-default"
    >
      <div
        className="panel-heading"
      >
        <Connect(Translate)>
          Two-step verification
        </Connect(Translate)>
      </div>
      <div
        className="panel-body"
      >
        <div>
          <p>
            <Connect(Translate)>
              Activate this feature for enhanced account security
            </Connect(Translate)>
          </p>
          <h3>
            <Connect(Translate)>
              Using Google Authenticator
            </Connect(Translate)>
          </h3>
          <LocalForm
            initialState={Object {}}
            model="2fa"
            onSubmit={[Function]}
          >
            <ol>
              <li>
                <Connect(Translate)>
                  Install the Google Authenticator app on your mobile device
                </Connect(Translate)>
              </li>
              <li>
                <Connect(Translate)>
                  Open the app and select "Add Account" (usually a plus symbol)
                </Connect(Translate)>
              </li>
              <li>
                <Connect(Translate)>
                  Scan the following QR code selecting the "scan barcode" option:
                </Connect(Translate)>
                <div
                  className="qr-code"
                >
                  <ForwardRef
                    bgColor="white"
                    fgColor="black"
                    includeMargin={false}
                    level="Q"
                    size={200}
                    value="otpAuthURL"
                  />
                </div>
                <Connect(Translate)>
                  Or enter this secret key into your Authenticator app
                </Connect(Translate)>
                <br />
                <Connect(Translate)>
                  (please keep this key secret and don't share it):
                </Connect(Translate)>
                <div
                  className="secret-key"
                >
                  <span>
                    generatedSecret
                  </span>
                </div>
              </li>
              <li>
                <Connect(Translate)>
                  Enter the 6-digit verification code generated by your Authenticator app:
                </Connect(Translate)>
                <br />
                <div
                  className="row"
                >
                  <div
                    className="col-8 col-md-4 col-lg-2 "
                  >
                    <DefaultConnectedControlText
                      className="form-control"
                      id="token"
                      model=".token"
                    />
                  </div>
                </div>
              </li>
            </ol>
            <p>
              <Connect(I18NLink)
                className="btn btn-default"
                to="/settings/account"
              >
                Cancel
              </Connect(I18NLink)>
              <button
                className="btn btn-success"
                type="submit"
              >
                <Connect(Translate)>
                  Confirm
                </Connect(Translate)>
              </button>
            </p>
          </LocalForm>
        </div>
      </div>
    </div>
  </div>
</div>
`;
